2013-09-05 Deng Pang <DengPang@rst.ricoh.com>
      * db/source/PPD/Gestetner/PS/Gestetner-DSc1030_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-DSc1030_PXL.ppd,
        db/source/printer/Gestetner-DSc1030.xml,
        db/source/PPD/Gestetner/PS/Gestetner-DSc1045_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-DSc1045_PXL.ppd,
        db/source/printer/Gestetner-DSc1045.xml,
        db/source/PPD/Gestetner/PS/Gestetner-DSc1060_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-DSc1060_PXL.ppd,
        db/source/printer/Gestetner-DSc1060.xml,
        db/source/PPD/Gestetner/PS/Gestetner-MP_C3003_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-MP_C3003_PXL.ppd,
        db/source/printer/Gestetner-MP_C3003.xml,
        db/source/PPD/Gestetner/PS/Gestetner-MP_C3503_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-MP_C3503_PXL.ppd,
        db/source/printer/Gestetner-MP_C3503.xml,
        db/source/PPD/Gestetner/PS/Gestetner-MP_C4503_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-MP_C4503_PXL.ppd,
        db/source/printer/Gestetner-MP_C4503.xml,
        db/source/PPD/Gestetner/PS/Gestetner-MP_C5503_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-MP_C5503_PXL.ppd,
        db/source/printer/Gestetner-MP_C5503.xml,
        db/source/PPD/Gestetner/PS/Gestetner-MP_C6003_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-MP_C6003_PXL.ppd,
        db/source/printer/Gestetner-MP_C6003.xml,
        db/source/PPD/Gestetner/PS/Gestetner-MP_C6502_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-MP_C6502_PXL.ppd,
        db/source/printer/Gestetner-MP_C6502.xml,
        db/source/PPD/Gestetner/PS/Gestetner-MP_C8002_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-MP_C8002_PXL.ppd,
        db/source/printer/Gestetner-MP_C8002.xml,
        db/source/PPD/Lanier/PS/Lanier-MP_C3003_PS.ppd,
        db/source/PPD/Lanier/PXL/Lanier-MP_C3003_PXL.ppd,
        db/source/printer/Lanier-MP_C3003.xml,