@@ -118,6 +118,9 @@
       <id>printer/Epson-E-360_Series</id>
     </printer>
     <printer>
+      <id>printer/Epson-E-370_Series</id>
+    </printer>
+    <printer>
       <id>printer/Epson-E-500</id>
     </printer>
     <printer>
@@ -146,6 +149,9 @@
     </printer>
     <printer>
       <id>printer/Epson-E-830_Series</id>
+    </printer>
+    <printer>
+      <id>printer/Epson-E-840_Series</id>
     </printer>
     <printer>
       <id>printer/Epson-EP-801A</id>
