@@ -1,3 +1,9 @@
+2013-09-25  Seiko Epson Corporation <linux-printer@epson.jp>
+	* db/source/printer/Epson-E-370_Series.xml,
+	  db/source/printer/Epson-E-840_Series.xml: Added new printer.xml
+
+	* db/source/driver/epson-escpr.xml: Added the above printer.
+
 2013-09-05 Deng Pang <DengPang@rst.ricoh.com>
       * db/source/PPD/Gestetner/PS/Gestetner-DSc1030_PS.ppd,
         db/source/PPD/Gestetner/PXL/Gestetner-DSc1030_PXL.ppd,
